2018-12-18  Albrecht Dreß  <albrecht.dress@arcor.de>

	SMTP, POP: fall back to auth w/ password if GSS failed

	* libnetclient/net-client-pop.c, libnetclient/net-client-smtp.c:
	  retry auth with password if GSS auth failed; small performance
	  improvement checking the various auth methods
	* libnetclient/net-client-utils.c: print more (internal) debug
	  info about failed GSS operations, fix nit-picks

2018-12-14  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Stop using GSlice; it may go away

	* libbalsa/mailbox.c (libbalsa_mailbox_search_iter_new): use
	g_new(), not g_slice_new();
	(libbalsa_mailbox_search_iter_unref): use g_free(), not
	g_slice_free().

2018-12-13  Albrecht Dreß  <albrecht.dress@arcor.de>

	Replace readdir() by g_dir_read_name()

	* libbalsa/folder-scanners.c: replace opendir/readdir/closedir
	  by g_dir_*, and refactor functions libbalsa_scanner_mdir()
	  and libbalsa_scanner_local_dir_helper
	* libbalsa/mailbox_imap.c: replace opendir/readdir/closedir
	  by g_dir_*

2018-12-09  Albrecht Dreß  <albrecht.dress@arcor.de>

	Clean up deadwood

	* src/mailbox-conf.c (run_mailbox_conf),
	(create_local_mailbox_dialog): remove the “deadwood”, and
	a stray debug message…

2018-12-08  Albrecht Dreß  <albrecht.dress@arcor.de>

	Fix some issues detected by cppcheck

	* libbalsa/imap/auth-gssapi.c: fix (unlikely) uninitialised use of rc
	* libbalsa/imap/imap-auth.c: do not dereference NULL pointer if
	  an error occurred
	* libbalsa/libbalsa.c: fix signed/unsigned mismatch, and use
	  g_debug instead of printf
	* libbalsa/mailbox_imap.c: fix signed/unsigned mismatch
	* libinit_balsa/assistant_page_directory.c: fix different
	  parameters names in function prototype and implementation
	* src/balsa-message.c, src/save-restore.c: do no dereference
	  pointer before checking it it is not NULL
	* src/sendmsg-window.c: fix false-positive about NULL pointer dereference
	* src/store-address.c: fix false-positive by splitting an
	  over-complex construct
